--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
       // Store the current path in sessionStorage and redirect to index.html
       // This enables client-side routing for GitHub Pages SPAs
       sessionStorage.setItem('redirect', location.pathname + location.search + location.hash);
-      location.replace(location.origin + '/todo-app/');
+      location.replace(location.origin + '/todo-app-with-agent/');
     </script>
   </head>
   <body>
